--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on:  ubuntu-latest
     environment: ${{ github.event.inputs.env }}
     steps:
-    - uses: actions:checkout@v3
+    - uses: actions/checkout@v3
 
     - name: Run script
       run: |
