--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -2,15 +2,6 @@ name: verify
 
 on:
   workflow_dispatch:
-    inputs:
-      env:
-        description: 'property'
-        required: true
-        default: oak
-        type: choice
-        options:
-        - oak
-        - chestnut
 
 permissions:
   id-token: write
@@ -19,13 +10,12 @@ permissions:
 jobs:
   verify:
     runs-on:  ubuntu-latest
-    environment: ${{ github.event.inputs.env }}
     steps:
     - uses: actions/checkout@v3
 
     - name: Run script
       run: |
         pip install ics
-        python3 verify_feeds.py --booking "${{ secrets.BOOKING }}"
+        python3 verify_feeds.py --end "${{ secrets.END_DATE}}" "${{ secrets.WHITBY }}"
       working-directory: ./python
       
